Enh 35656189 - [35401756->23.09] Remove requirement to --add-opens java.base/java.lang.invoke=com.oracle.coherence to JDK 11/17 or higher startup  (main -> ce-main @ 102172) Remote remote.full on coherence-ce/main success, changes 102186, synced @102187, job.9.20230730210643.25905
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 102188]