@@ -111,8 +111,6 @@
       --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
       --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
       --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-      --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
       --add-opens=java.base/java.lang=ALL-UNNAMED
     </default.failsafe.modules.argline>
     <failsafe.modules.argline>${default.failsafe.modules.argline}</failsafe.modules.argline>
@@ -124,8 +122,6 @@
       --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
       --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
       --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-      --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
       --add-opens=java.base/java.lang=ALL-UNNAMED
     </default.surefire.modules.argline>
     <surefire.modules.argline>${default.surefire.modules.argline}</surefire.modules.argline>
