@@ -705,8 +705,6 @@
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
           --add-opens=java.base/java.lang=ALL-UNNAMED
         </default.failsafe.modules.argline>
         <default.surefire.modules.argline>
@@ -715,8 +713,6 @@
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
           --add-opens=java.base/java.lang=ALL-UNNAMED
         </default.surefire.modules.argline>
         <failsafe.modules.argline>${default.failsafe.modules.argline}</failsafe.modules.argline>
@@ -804,8 +800,6 @@
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
         </failsafe.modules.argline>
         <surefire.modules.argline>
           --add-exports java.management/sun.management=com.oracle.coherence
@@ -813,8 +807,6 @@
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
         </surefire.modules.argline>
         <jacoco.agent.ut.arg/>
         <jacoco.agent.it.arg/>
